Bug 182976 - plasma-calender plasmoid does not support RTL desktop
Summary: plasma-calender plasmoid does not support RTL desktop
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-clock (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: rtl
: 187106 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-02-03 12:36 UTC by Zayed Al-Saidi
Modified: 2009-12-04 22:31 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Zayed Al-Saidi 2009-02-03 12:36:22 UTC
Version:            (using KDE 4.2.0)
OS:                Linux
Installed from:    SuSE RPMs

In the RTL desktop, plasma-calender still reneder the calender in the LTR mode. 

In the RTL the column of number of week should be in right side and the day name row should be in reverse order.
Comment 1 Dario Andres 2009-04-27 02:26:44 UTC
*** Bug 187106 has been marked as a duplicate of this bug. ***
Comment 2 Dotan Cohen 2009-04-27 08:13:04 UTC
Here is a screen shot of the backward calendar, posted on the dupe:
http://bugsfiles.kde.org/attachment.cgi?id=32090

It can be seen that the dates go from left to right, they should be going from right to left. For non-Arabic and non-Hebrew and non-Farsi devs, KDE applications can be started in RTL move with the --reverse flag:
$ konqueror --reverse

That will leave the language in English, but will enable RTL features. Thanks!
Comment 3 Dotan Cohen 2009-10-21 10:34:01 UTC
This issue is still present in KDE 4.3.2
Comment 4 John Layt 2009-11-07 02:27:09 UTC
Please see patch on reviewboard http://reviewboard.kde.org/r/2088/ for this including screenshots to confirm all looks ok now.  Please read the notes as there is one small issue.

Does the standard (non-plasma) date picker also have this problem?  Can you try the Date&Time KCM module in System Settings to see?
Comment 5 Zayed Al-Saidi 2009-11-07 05:40:58 UTC
Thanks John, you are my hero !

From screenshot I can confirm it looks ok except the Week Numbers column location (as you said in reviewboard).

After examining the Date&Time KCM module, it has this problem. I can attach a screenshot if you need it. Do I need to open another bug report for this problem ?
Comment 6 Dotan Cohen 2009-11-07 12:24:23 UTC
Looks great. I especially like the week numbers being reversed (45/44 as opposed to 44/45), though I know there are differing opinions on the subject. Zayed, what do you think about that?


I don't see any problem with the week number column remaining on the left. However, I don't really need that function so I am probably not as sensitive to it as people who use it.


Thank you very, very much! This will make a lot of users happy!


> Does the standard (non-plasma) date picker also have
> this problem?  Can you try the Date&Time KCM module
> in System Settings to see?

Yes, that module suffers the issue as well. Can that be fixed here, or should I file a separate bug?
Comment 7 Zayed Al-Saidi 2009-11-07 13:52:37 UTC
@ Dotan

I agree with you on "week numbers being reversed" that what it should be. For the week number column location, it is not a big deal. I get used to it on the left :)
Comment 8 John Layt 2009-11-08 00:15:29 UTC
Cool, I'll go ahead with this then for the next 4.3 bugfix release and for 4.4.

You can open a separate bug for the other one if you want, file it under kdelibs/kdeui, refer to the KDatePicker widget and assign to me.
Comment 9 Zayed Al-Saidi 2009-11-08 05:19:25 UTC
Thanks John, please see this bug 213637
Comment 10 Zayed Al-Saidi 2009-12-01 22:27:26 UTC
John, I think you should close this bug, isn't it?
Comment 11 John Layt 2009-12-04 22:31:48 UTC
SVN commit 1058652 by jlayt:

Fix Calendar Table to support RTL drawing mode.  This involved re-writing and
simplifying a lot of the calculation routines, and I renamed a lot of stuff to
be self-documenting.

BUG: 182976

As a bonus, because I had to clean-up and re-write most of the drawing code
to support RTL, I was able to solve the other table drawing issues with the
hover and highlight not being removed.

BUG: 206988

Also includes a few krazy fixes and other clean-ups.



 M  +173 -167  calendartable.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1058652