Fix Calendar Table to support RTL drawing mode.  This involved re-writing and simplifying a lot of the calculation routines, and I renamed a lot of stuff to be self-documenting.

BUG: 182976

As a bonus, because I had to clean-up and re-write most of the drawing code
to support RTL, I was able to solve the other table drawing issues with the
hover and highlight not being removed.

BUG: 206988

Also includes a few krazy fixes and other clean-ups.


svn path=/trunk/KDE/kdebase/workspace/; revision=1058652